Newinput ko firebase nk post method

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Taiju</title>
     <link href="/src/styles.css" rel="stylesheet" />
+    <link href="/src/loading.css" rel="stylesheet" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap");
     </style>
